[gd_scene load_steps=12 format=3 uid="uid://ckjovd4m5x8h4"]

[ext_resource type="Script" uid="uid://digm7s2akv0h" path="res://Scenes/Objects/Player/Parts/Leg/Leg.gd" id="1_57jxl"]
[ext_resource type="Texture2D" uid="uid://ok7e42kijr8l" path="res://Assets/Bones/Leg3.png" id="2_1twnf"]
[ext_resource type="Texture2D" uid="uid://j0vfd8sckgrm" path="res://Assets/Bones/Leg2.png" id="3_4i633"]
[ext_resource type="Script" uid="uid://c5xh8k0ojshh5" path="res://Scenes/Objects/Player/PartSelectionArea.gd" id="3_7m4t5"]
[ext_resource type="Script" uid="uid://brif1cey8jv3k" path="res://Scenes/Objects/Player/Parts/Leg/arc_follow.gd" id="4_6664t"]
[ext_resource type="Texture2D" uid="uid://cndyxdysslfsp" path="res://Assets/Bones/Leg1.png" id="4_dkpgs"]
[ext_resource type="Script" uid="uid://dx4ik8gmlqv56" path="res://Scenes/Objects/Player/Parts/Leg/KickArea.gd" id="5_b30j4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o5qlu"]
size = Vector2(33, 150)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kqpvh"]
size = Vector2(56, 161)

[sub_resource type="Curve2D" id="Curve2D_7m4t5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, -128, 0, 128, 0, 256, -256, 0, 0, 0, 0, 512, 0)
}
point_count = 3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6664t"]
size = Vector2(188, 52)

[node name="Leg" type="CharacterBody2D" node_paths=PackedStringArray("sprites")]
collision_layer = 2
script = ExtResource("1_57jxl")
sprites = [NodePath("Root/Leg1"), NodePath("Root/Leg2"), NodePath("Root/Leg3")]
metadata/_custom_type_script = "uid://bf3ggechk0wan"

[node name="Root" type="Node2D" parent="."]
position = Vector2(-1.0000002, -26.000002)

[node name="Leg3" type="Sprite2D" parent="Root"]
position = Vector2(5.384613, 74)
texture = ExtResource("2_1twnf")

[node name="Leg2" type="Sprite2D" parent="Root"]
position = Vector2(-3.846161, 34.461594)
texture = ExtResource("3_4i633")

[node name="Leg1" type="Sprite2D" parent="Root"]
position = Vector2(-10.000004, -36.230774)
texture = ExtResource("4_dkpgs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -25)
shape = SubResource("RectangleShape2D_o5qlu")

[node name="PartSelectionArea" type="Area2D" parent="."]
script = ExtResource("3_7m4t5")
metadata/_custom_type_script = "uid://c5xh8k0ojshh5"

[node name="CollisionShape2D" type="CollisionShape2D" parent="PartSelectionArea"]
position = Vector2(-2, -24.5)
shape = SubResource("RectangleShape2D_kqpvh")

[node name="TrajectoryArc" type="Path2D" parent="."]
unique_name_in_owner = true
visible = false
curve = SubResource("Curve2D_7m4t5")
script = ExtResource("4_6664t")

[node name="KickArea" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource("5_b30j4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="KickArea"]
position = Vector2(0, 28)
shape = SubResource("RectangleShape2D_6664t")

[node name="KickDelay" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="KickArea" to="KickArea" method="_on_body_entered"]
[connection signal="body_exited" from="KickArea" to="KickArea" method="_on_body_exited"]
[connection signal="timeout" from="KickDelay" to="." method="_on_kick_delay_timeout"]
